[package]
authors = ["Victor Koenders <victor.koenders@gmail.com>"]
edition = "2018"
name = "orm"
version = "0.1.0"

[features]
default = ["pg"]
pg = []
sqlite = []

[dependencies]
cfg-if = "*"
chrono = "0.4.6"
dotenv = "0.13.0"
failure = "0.1.5"
hashbrown = "0.1.7"
postgres = "0.15.2"
r2d2 = "0.8.3"
r2d2_postgres = "0.14.0"
uuid = "0.7.1"

[dependencies.orm_derive]
path = "derive"
