[package]
name = "orm_pq"
version = "0.1.0"
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orm_core = { path = "../orm_core" }
uuid = { version = "0.7", optional = true }
chrono = { version = "0.4", optional = true }

[features]
default = []
derive = ["orm_core/derive"]