[package]
name = "test_bin"
version = "0.1.0"
authors = ["Trangar <victor.koenders@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
orm_pq = { path = "../orm_pq", features = ["uuid", "chrono", "derive"] }
uuid = {version = "0.7", features = ["v4"]}
